--- a/index.html
+++ b/index.html
@@ -346,123 +346,118 @@
 
 
 
-  <!-- 6 Программа тренинга (Accrodion) -->
-  <section class="program padding">
+  <!-- 6 Программа тренинга -->
+  <section class="  padding">
     <div class="container">
-      <div class="row">
-        <div class="col-sm-12">
+      <div class="text-center">
+        <h1 class="display-4">Программа тренинга</h1>
+      </div>
+      <br />
+      <div class="accordion" id="accordionExample">
 
-          <div class="text-center">
-            <h1 class="display-4">Программа тренинга</h1>
+        <!-- 1 -->
+        <div class="card">
+          <div class="card-header" id="headingOne">
+            <h5 class="mb-0">
+              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
+                aria-expanded="true" aria-controls="collapseOne">
+                <i class="fas fa-plus"></i>&nbsp;&nbsp;Часть 1 «Зачем нам вилка, если ложка есть?»
+              </button>
+            </h5>
           </div>
-          <br />
-          <div class="accordion" id="accordionExample">
 
-            <!-- 1 -->
-            <div class="card">
-              <div class="card-header" id="headingOne">
-                <h5 class="mb-0">
-                  <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
-                    aria-expanded="true" aria-controls="collapseOne">
-                    <i class="fas fa-plus"></i>&nbsp;&nbsp;Часть 1 «Зачем нам вилка, если ложка есть?»
-                  </button>
-                </h5>
-              </div>
+          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
+            <div class="card-body text-lg-left">
+              <ul>
+                <li>Виды чтения. Критерии медленного, скорочтения и фоточтения. Контексты применения.</li>
+                <li>Будьте готовы: «феномены, наблюдаемые при встраивании навыка быстрого чтения»</li>
+                <li>Суть навыка скорочтения – научная и методологическая основы</li>
+              </ul>
 
-              <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-                <div class="card-body text-lg-left">
-                  <ul>
-                    <li>Виды чтения. Критерии медленного, скорочтения и фоточтения. Контексты применения.</li>
-                    <li>Будьте готовы: «феномены, наблюдаемые при встраивании навыка быстрого чтения»</li>
-                    <li>Суть навыка скорочтения – научная и методологическая основы</li>
-                  </ul>
-
-                </div>
-              </div>
             </div>
+          </div>
+        </div>
 
-            <!-- 2 -->
-            <div class="card">
-              <div class="card-header" id="headingTwo">
-                <h5 class="mb-0">
-                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
-                    aria-expanded="false" aria-controls="collapseTwo">
-                    <i class="fas fa-plus"></i>&nbsp;&nbsp;Часть 2 «Ломать – не строить!»
-                  </button>
-                </h5>
-              </div>
-              <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-                <div class="card-body text-lg-left">
-                  <ul>
-                    <li><span>Разрушение внутреннего проговора</span></li>
-                    <li><span>Увеличение свободы, избавление от внутренних мыслей против «ЧИТАЮ БЫСТРО»</span></li>
-                    <li><span>Приобретение навыка чтения небуквенного текста</span></li>
-                  </ul>
-                </div>
-              </div>
+        <!-- 2 -->
+        <div class="card">
+          <div class="card-header" id="headingTwo">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
+                aria-expanded="false" aria-controls="collapseTwo">
+                <i class="fas fa-plus"></i>&nbsp;&nbsp;Часть 2 «Ломать – не строить!»
+              </button>
+            </h5>
+          </div>
+          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
+            <div class="card-body text-lg-left">
+              <ul>
+                <li><span>Разрушение внутреннего проговора</span></li>
+                <li><span>Увеличение свободы, избавление от внутренних мыслей против «ЧИТАЮ БЫСТРО»</span></li>
+                <li><span>Приобретение навыка чтения небуквенного текста</span></li>
+              </ul>
             </div>
+          </div>
+        </div>
 
-            <!-- 3 -->
-            <div class="card">
-              <div class="card-header" id="headingThree">
-                <h5 class="mb-0">
-                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
-                    aria-expanded="false" aria-controls="collapseThree">
-                    <i class="fas fa-plus"></i>&nbsp;&nbsp;Часть 3 «Сделай сам!»
-                  </button>
-                </h5>
-              </div>
-              <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-                <div class="card-body text-lg-left">
-                  <ul>
-                    <li><span>Расширение визуального</span><span> </span><span> </span><span>восприятия страницы</span></li>
-                    <li><span>Выработка своей траектории скольжения</span><span> </span></li>
-                    <li><span>Создание промежуточных «пит-стопов»</span></li>
-                  </ul>
-                </div>
-              </div>
+        <!-- 3 -->
+        <div class="card">
+          <div class="card-header" id="headingThree">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
+                aria-expanded="false" aria-controls="collapseThree">
+                <i class="fas fa-plus"></i>&nbsp;&nbsp;Часть 3 «Сделай сам!»
+              </button>
+            </h5>
+          </div>
+          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
+            <div class="card-body text-lg-left">
+              <ul>
+                <li><span>Расширение визуального</span><span> </span><span> </span><span>восприятия страницы</span></li>
+                <li><span>Выработка своей траектории скольжения</span><span> </span></li>
+                <li><span>Создание промежуточных «пит-стопов»</span></li>
+              </ul>
             </div>
+          </div>
+        </div>
 
-            <!-- 4 -->
-            <div class="card">
-              <div class="card-header" id="headingFour">
-                <h5 class="mb-0">
-                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour"
-                    aria-expanded="false" aria-controls="collapseFour">
-                    <i class="fas fa-plus"></i>&nbsp;&nbsp;Часть 4 «Быстрей и ещё быстрее!»
-                  </button>
-                </h5>
-              </div>
-              <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
-                <div class="card-body text-lg-left">
-                  <ul>
-                    <li><span>МАКСИМАЛЬНЫЙ разгон скорости</span></li>
-                    <li><span>Интенсивный прорыв в восприятии</span></li>
-                    <li><span>Закрепление навыка чтения в удовольствие</span></li>
-                  </ul>
-                </div>
-              </div>
+        <!-- 4 -->
+        <div class="card">
+          <div class="card-header" id="headingFour">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFour"
+                aria-expanded="false" aria-controls="collapseFour">
+                <i class="fas fa-plus"></i>&nbsp;&nbsp;Часть 4 «Быстрей и ещё быстрее!»
+              </button>
+            </h5>
+          </div>
+          <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordionExample">
+            <div class="card-body text-lg-left">
+              <ul>
+                <li><span>МАКСИМАЛЬНЫЙ разгон скорости</span></li>
+                <li><span>Интенсивный прорыв в восприятии</span></li>
+                <li><span>Закрепление навыка чтения в удовольствие</span></li>
+              </ul>
             </div>
+          </div>
+        </div>
 
-            <!-- 5 -->
-            <div class="card">
-              <div class="card-header" id="headingFive">
-                <h5 class="mb-0">
-                  <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive"
-                    aria-expanded="false" aria-controls="collapseFive">
-                    <i class="fas fa-plus"></i>&nbsp;&nbsp;Часть 5 «Чем глубже в лес, тем толще понимание»
-                  </button>
-                </h5>
-              </div>
-              <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
-                <div class="card-body text-lg-left">
-                  <ul>
-                    <li><span>Марафонский забег</span></li>
-                    <li><span>Выработка максимального соотношения скорости и понимания</span></li>
-                    <li><span>Тестирование по результатам выхода из тренинга</span></li>
-                  </ul>
-                </div>
-              </div>
+        <!-- 5 -->
+        <div class="card">
+          <div class="card-header" id="headingFive">
+            <h5 class="mb-0">
+              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseFive"
+                aria-expanded="false" aria-controls="collapseFive">
+                <i class="fas fa-plus"></i>&nbsp;&nbsp;Часть 5 «Чем глубже в лес, тем толще понимание»
+              </button>
+            </h5>
+          </div>
+          <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordionExample">
+            <div class="card-body text-lg-left">
+              <ul>
+                <li><span>Марафонский забег</span></li>
+                <li><span>Выработка максимального соотношения скорости и понимания</span></li>
+                <li><span>Тестирование по результатам выхода из тренинга</span></li>
+              </ul>
             </div>
           </div>
         </div>
