new photo trainer

--- a/index.html
+++ b/index.html
@@ -237,11 +237,27 @@
       </div>
       <div>
         <ul>
-          <li>руководителей, бизнесменов</li>
-          <li>психологов, тренеров, учителей</li>
-          <li>студентов, школьников, аспирантов</li>
-          <li>людей, занимающихся саморазвитием</li>
+          <li><span>руководителям, бизнесменам</span></li>
+          <li><span>психологам, тренерам, учителей</span></li>
+          <li><span>студентам, школьникам, аспирантам</span></li>
+          <li><span>людям, занимающимся саморазвитием</span></li>
         </ul>
+        <p>Вам к нам если…</p>
+        <p>
+          <ul>
+            <li><span>читаете уже везде, на кухне, в душе, в ванной, в самолёте … и все равно не успеваете следить за
+                всеми трендами</span></li>
+            <li><span>хочется выглядеть приличным человеком, обсуждать последние книжные новинки и поддержать беседу,
+                но принципиально не читаете (отбили желание с детства в школе) мы вернём вам счастливое чтение и
+                детство J</span></li>
+            <li><span>вы студент (все вокруг гуляют ночами, а вы не успеваете к сессии и сидите ночами за книгами)
+                Верните в своё расписание заслуженное время для личной жизни</span></li>
+            <li><span>хотите открыть для себя новую 4Dреальность. Дёшево и полезно для здоровья J Кинотеатр у вас в
+                голове по цене бумажной книги</span></li>
+            <li><span>закрыв книгу вы понимаете, что пока читали всё время думали о своём и ничего не запомнили.
+                Приходится постоянно перечитывать?..</span></li>
+          </ul>
+        </p>
       </div>
   </section>
 
@@ -601,27 +617,15 @@
           <img src="img/trainer-photos/main.jpg" class="img-fluid" alt="Trainer">
         </div>
         <div class=" col-sm-12 col-md-8">
-          <p>Татьяна Карпицкая, тренер НЛП, бизнес-тренер, бизнес- консультант, по&nbsp;первому образованию закончила
-            аспирантуру по&nbsp;специальности филология <em>подробнее о&nbsp;достижениях...</em></p>
-
-
-          <div>
-            <p>Татьяна Карпицкая&nbsp;— тренер НЛП, бизнес-тренер, бизнес-консультант. По&nbsp;первому образованию
-              учитель
-              русского языка и&nbsp;литературы, закончила аспирантуру по&nbsp;специальности филология, имеет ряд
-              научных
-              публикаций по&nbsp;инструментам воздействия художественного текста на&nbsp;восприятие, психику.</p>
-            <p>Тренер курса «Скорочтение» с&nbsp;2014&nbsp;года. За&nbsp;это время обучила несколько сотен учеников
-              в&nbsp;различных регионах России (Москва, Краснодар, Красноярск, Уфа, Санкт-Петербург)</p>
-            <p>Создатель <nobr>4-х</nobr> авторских концептов курса НЛП-практик: «Жизнь в&nbsp;удовольствие», «НЛП
-              в&nbsp;бизнесе», «НЛП для&nbsp;hr», «My&nbsp;Way» а&nbsp;также других тренингов личностного роста
-              и&nbsp;развития
-              сверхспособностей («Мозг на&nbsp;100%», «Кто ясно мыслит, тот ясно излагает», «Нлп на&nbsp;грани
-              и&nbsp;за&nbsp;гранью»).</p>
-            <p>С&nbsp;2006 по&nbsp;2013 год сделала успешную карьеру в&nbsp;бизнесе, собственник бизнесов
-              в&nbsp;нескольких
-              отраслях.</p>
-          </div>
+          <p>Татьяна Карпицкая — тренер НЛП, бизнес-тренер, бизнес-консультант. По первому образованию учитель русского
+            языка и литературы, закончила аспирантуру по специальности филология, имеет ряд научных публикаций по
+            инструментам воздействия художественного текста на восприятие, психику.</p>
+          <p>Тренер курса «Скорочтение» с 2014 года. За это время обучила несколько сотен учеников в различных регионах
+            России (Москва, Краснодар, Красноярск, Уфа, Санкт-Петербург)</p>
+          <p>Создатель 4-х авторских концептов курса НЛП-практик: «Жизнь в удовольствие», «НЛП в бизнесе», «НЛП для
+            hr», «My Way» а также других тренингов личностного роста и развития сверхспособностей («Мозг на 100%», «Кто
+            ясно мыслит, тот ясно излагает», «Нлп на грани и за гранью»).</p>
+          <p>С 2006 по 2013 год сделала успешную карьеру в бизнесе, собственник бизнесов в нескольких отраслях.</p>
 
         </div>
       </div>
@@ -631,19 +635,24 @@
       <!-- <h1 class="my-4 text-center text-lg-left">Thumbnail Gallery</h1> -->
 
       <div class="row text-center text-lg-left">
-        <div class="col-lg-4 col-md-4 col-xs-6">
+        <div class="col-lg-3 col-md-3 col-xs-6">
           <a href="#" class="d-block mb-4 h-100">
             <img class="img-fluid img-thumbnail" src="img/trainer-photos/1.jpg" alt="">
           </a>
         </div>
-        <div class="col-lg-4 col-md-4 col-xs-6">
+        <div class="col-lg-3 col-md-3 col-xs-6">
           <a href="#" class="d-block mb-4 h-100">
             <img class="img-fluid img-thumbnail" src="img/trainer-photos/2.jpg" alt="">
           </a>
         </div>
-        <div class="col-lg-4 col-md-4 col-xs-6">
+        <div class="col-lg-3 col-md-3 col-xs-6">
           <a href="#" class="d-block mb-4 h-100">
             <img class="img-fluid img-thumbnail" src="img/trainer-photos/3.jpg" alt="">
+          </a>
+        </div>
+        <div class="col-lg-3 col-md-3 col-xs-6">
+          <a href="#" class="d-block mb-4 h-100">
+            <img class="img-fluid img-thumbnail" src="img/trainer-photos/4.png" alt="">
           </a>
         </div>
       </div>
