--- a/index.html
+++ b/index.html
@@ -363,7 +363,7 @@
 
 
   <!-- 6 Программа тренинга -->
-  <section class="  padding">
+  <section class="program padding">
     <div class="container">
       <div class="text-center">
         <h1 class="display-4">Программа тренинга</h1>
