--- a/index.html
+++ b/index.html
@@ -635,22 +635,22 @@
       <!-- <h1 class="my-4 text-center text-lg-left">Thumbnail Gallery</h1> -->
 
       <div class="row text-center text-lg-left">
-        <div class="col-lg-3 col-md-3 col-xs-6">
+        <div class="col-lg-3 col-md-3 col-sm-6">
           <a href="#" class="d-block mb-4 h-100">
             <img class="img-fluid img-thumbnail" src="img/trainer-photos/1.jpg" alt="">
           </a>
         </div>
-        <div class="col-lg-3 col-md-3 col-xs-6">
+        <div class="col-lg-3 col-md-3 col-sm-6">
           <a href="#" class="d-block mb-4 h-100">
             <img class="img-fluid img-thumbnail" src="img/trainer-photos/2.jpg" alt="">
           </a>
         </div>
-        <div class="col-lg-3 col-md-3 col-xs-6">
+        <div class="col-lg-3 col-md-3 col-sm-6">
           <a href="#" class="d-block mb-4 h-100">
             <img class="img-fluid img-thumbnail" src="img/trainer-photos/3.jpg" alt="">
           </a>
         </div>
-        <div class="col-lg-3 col-md-3 col-xs-6">
+        <div class="col-lg-3 col-md-3 col-sm-6">
           <a href="#" class="d-block mb-4 h-100">
             <img class="img-fluid img-thumbnail" src="img/trainer-photos/4.png" alt="">
           </a>
