--- a/index.html
+++ b/index.html
@@ -514,22 +514,22 @@
             <div class="carousel-item active">
               <div class="row text-center text-lg-left">
                 <div class="row">
-                  <div class="col-lg-3 col-md-3 col-sm-3">
+                  <div class="col-3">
                     <a href="#" class="d-block mb-4 h-100">
                       <img class="img-fluid img-thumbnail" src="img/photos/1.JPG" alt="">
                     </a>
                   </div>
-                  <div class="col-lg-3 col-md-3 col-sm-3">
+                  <div class="col-3">
                     <a href="#" class="d-block mb-4 h-100">
                       <img class="img-fluid img-thumbnail" src="img/photos/2.JPG" alt="">
                     </a>
                   </div>
-                  <div class="col-lg-3 col-md-3 col-sm-3">
+                  <div class="col-3">
                     <a href="#" class="d-block mb-4 h-100">
                       <img class="img-fluid img-thumbnail" src="img/photos/3.JPG" alt="">
                     </a>
                   </div>
-                  <div class="col-lg-3 col-md-3 col-sm-3">
+                  <div class="col-3">
                     <a href="#" class="d-block mb-4 h-100">
                       <img class="img-fluid img-thumbnail" src="img/photos/4.JPG" alt="">
                     </a>
@@ -539,22 +539,22 @@
             </div>
             <div class="carousel-item">
               <div class="row text-center text-lg-left">
-                <div class="col-lg-3 col-md-3 col-sm-3">
+                <div class="col-3">
                   <a href="#" class="d-block mb-4 h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/5.JPG" alt="">
                   </a>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-3">
+                <div class="col-3">
                   <a href="#" class="d-block mb-4 h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/6.JPG" alt="">
                   </a>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-3">
+                <div class="col-3">
                   <a href="#" class="d-block mb-4 h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/7.JPG" alt="">
                   </a>
                 </div>
-                <div class="col-lg-3 col-md-3 col-sm-3">
+                <div class="col-3">
                   <a href="#" class="d-block mb-4 h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/8.JPG" alt="">
                   </a>
