--- a/index.html
+++ b/index.html
@@ -614,7 +614,7 @@
       </div>
       <div class="row">
         <div class=" col-sm-12 col-md-4">
-          <img src="img/trainer-photos/main.jpg" class="img-fluid" alt="Trainer">
+          <img src="img/trainer/main.jpg" class="img-fluid" alt="Trainer">
         </div>
         <div class=" col-sm-12 col-md-8">
           <p>Татьяна Карпицкая — тренер НЛП, бизнес-тренер, бизнес-консультант. По первому образованию учитель русского
@@ -637,22 +637,22 @@
       <div class="row text-center text-lg-left">
         <div class="col-6 col-md-3 col-lg-3">
           <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="img/trainer-photos/1.jpg" alt="">
+            <img class="img-fluid img-thumbnail" src="img/trainer/1.jpg" alt="">
           </a>
         </div>
         <div class="col-6 col-md-3 col-lg-3">
           <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="img/trainer-photos/2.jpg" alt="">
+            <img class="img-fluid img-thumbnail" src="img/trainer/2.jpg" alt="">
           </a>
         </div>
         <div class="col-6 col-md-3 col-lg-3">
           <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="img/trainer-photos/3.jpg" alt="">
+            <img class="img-fluid img-thumbnail" src="img/trainer/3.jpg" alt="">
           </a>
         </div>
         <div class="col-6 col-md-3 col-lg-3">
           <a href="#" class="d-block mb-4 h-100">
-            <img class="img-fluid img-thumbnail" src="img/trainer-photos/4.jpg" alt="">
+            <img class="img-fluid img-thumbnail" src="img/trainer/4.jpg" alt="">
           </a>
         </div>
       </div>
