fix arrow in slider

--- a/index.html
+++ b/index.html
@@ -269,16 +269,18 @@
       </div>
       <div>
 
-        <li>Экспресс-метод за 2 дня благодаря инструментам НЛП. Быстрое чтение БЫСТРО!</li>
-        <li>Авторская методика с реальных людей, развивших в себе этот навык</li>
-        <li>Лучшие практики на базе исследовательской мастерской. Многолетний опыт .... и отобраны только
-          реально
-          работающие упражнения</li>
-        <li>Сам тренинг максимально кайфовый по настроению и атмосфере, наполнению фото/видео/музыка.</li>
-        <li>Работа не только с мозгом, но и с эмоциями и с телом — целостный
-          процесс</li>
-        <li>Побочные эффекты: развитие памяти и воображения</li>
-        <li>Посттренинговое сопровождение</li>
+        <ul>
+          <li>Экспресс-метод за 2 дня благодаря инструментам НЛП. Быстрое чтение БЫСТРО!</li>
+          <li>Авторская методика с реальных людей, развивших в себе этот навык</li>
+          <li>Лучшие практики на базе исследовательской мастерской. Многолетний опыт .... и отобраны только
+            реально
+            работающие упражнения</li>
+          <li>Сам тренинг максимально кайфовый по настроению и атмосфере, наполнению фото, видео, музыка</li>
+          <li>Работа не только с мозгом, но и с эмоциями и с телом — целостный
+            процесс</li>
+          <li>Побочные эффекты: развитие памяти и воображения</li>
+          <li>Посттренинговое сопровождение</li>
+        </ul>
       </div>
 
   </section>
@@ -514,23 +516,23 @@
             <div class="carousel-item active">
               <div class="row text-center text-lg-left">
                 <div class="row">
-                  <div class="col-3 col-md-6">
-                    <a href="#" class="d-block mb-4 h-100">
+                  <div class="col-3 col-md-3">
+                    <a href="#" class="d-block h-100">
                       <img class="img-fluid img-thumbnail" src="img/photos/1.JPG" alt="">
                     </a>
                   </div>
-                  <div class="col-3 col-md-6">
-                    <a href="#" class="d-block mb-4 h-100">
+                  <div class="col-3 col-md-3">
+                    <a href="#" class="d-block h-100">
                       <img class="img-fluid img-thumbnail" src="img/photos/2.JPG" alt="">
                     </a>
                   </div>
-                  <div class="col-3 col-md-6">
-                    <a href="#" class="d-block mb-4 h-100">
+                  <div class="col-3 col-md-3">
+                    <a href="#" class="d-block h-100">
                       <img class="img-fluid img-thumbnail" src="img/photos/3.JPG" alt="">
                     </a>
                   </div>
-                  <div class="col-3 col-md-6">
-                    <a href="#" class="d-block mb-4 h-100">
+                  <div class="col-3 col-md-3">
+                    <a href="#" class="d-block h-100">
                       <img class="img-fluid img-thumbnail" src="img/photos/4.JPG" alt="">
                     </a>
                   </div>
@@ -539,23 +541,23 @@
             </div>
             <div class="carousel-item">
               <div class="row text-center text-lg-left">
-                <div class="col-3 col-md-6">
-                  <a href="#" class="d-block mb-4 h-100">
+                <div class="col-3 col-md-3">
+                  <a href="#" class="d-block h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/5.JPG" alt="">
                   </a>
                 </div>
-                <div class="col-3 col-md-6">
-                  <a href="#" class="d-block mb-4 h-100">
+                <div class="col-3 col-md-3">
+                  <a href="#" class="d-block h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/6.JPG" alt="">
                   </a>
                 </div>
-                <div class="col-3 col-md-6">
-                  <a href="#" class="d-block mb-4 h-100">
+                <div class="col-3 col-md-3">
+                  <a href="#" class="d-block h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/7.JPG" alt="">
                   </a>
                 </div>
-                <div class="col-3 col-md-6">
-                  <a href="#" class="d-block mb-4 h-100">
+                <div class="col-3 col-md-3">
+                  <a href="#" class="d-block h-100">
                     <img class="img-fluid img-thumbnail" src="img/photos/8.JPG" alt="">
                   </a>
                 </div>
