Вам к нам если… fix

--- a/index.html
+++ b/index.html
@@ -127,6 +127,38 @@
 
 
 
+  <!-- Кому полезен -->
+  <section class=" bg-light padding">
+    <div class="container">
+      <div class="text-center ">
+        <h1 class="display-4">Кому полезен тренинг?</h1><br />
+      </div>
+      <div>
+        <ul>
+          <li><span>руководителям, бизнесменам</span></li>
+          <li><span>психологам, тренерам, учителей</span></li>
+          <li><span>студентам, школьникам, аспирантам</span></li>
+          <li><span>людям, занимающимся саморазвитием</span></li>
+        </ul>
+        <p>Вам к нам если…</p>
+        <ul>
+          <li>читаете уже везде, на кухне, в душе, в ванной, в самолёте … и все равно не успеваете следить за всеми
+            трендами </li>
+          <li>хочется выглядеть приличным человеком, обсуждать последние книжные новинки и поддержать беседу, но
+            принципиально не читаете (отбили желание с детства в школе) мы вернём вам счастливое чтение и детство J</li>
+          <li>вы студент (все вокруг гуляют ночами, а вы не успеваете к сессии и сидите ночами за книгами) Верните в
+            своё расписание заслуженное время для личной жизни</li>
+          <li>хотите открыть для себя новую 4Dреальность. Дёшево и полезно для здоровья J Кинотеатр у вас в голове по
+            цене бумажной книги</li>
+          <li>закрыв книгу вы понимаете, что пока читали всё время думали о своём и ничего не запомнили. Приходится
+            постоянно перечитывать?..</li>
+        </ul>
+      </div>
+  </section>
+
+
+
+
   <!-- кому полезен acordion -->
   <!-- <section class=" bg-showcase-1 padding">
     <div class="container">
@@ -229,37 +261,10 @@
   </section> -->
 
 
-  <!-- Кому полезен -->
-  <section class=" bg-light padding">
-    <div class="container">
-      <div class="text-center ">
-        <h1 class="display-4">Кому полезен тренинг?</h1><br />
-      </div>
-      <div>
-        <ul>
-          <li><span>руководителям, бизнесменам</span></li>
-          <li><span>психологам, тренерам, учителей</span></li>
-          <li><span>студентам, школьникам, аспирантам</span></li>
-          <li><span>людям, занимающимся саморазвитием</span></li>
-        </ul>
-        <p>Вам к нам если…</p>
-        <p>
-          <ul>
-            <li><span>читаете уже везде, на кухне, в душе, в ванной, в самолёте … и все равно не успеваете следить за
-                всеми трендами</span></li>
-            <li><span>хочется выглядеть приличным человеком, обсуждать последние книжные новинки и поддержать беседу,
-                но принципиально не читаете (отбили желание с детства в школе) мы вернём вам счастливое чтение и
-                детство J</span></li>
-            <li><span>вы студент (все вокруг гуляют ночами, а вы не успеваете к сессии и сидите ночами за книгами)
-                Верните в своё расписание заслуженное время для личной жизни</span></li>
-            <li><span>хотите открыть для себя новую 4Dреальность. Дёшево и полезно для здоровья J Кинотеатр у вас в
-                голове по цене бумажной книги</span></li>
-            <li><span>закрыв книгу вы понимаете, что пока читали всё время думали о своём и ничего не запомнили.
-                Приходится постоянно перечитывать?..</span></li>
-          </ul>
-        </p>
-      </div>
-  </section>
+
+
+
+
 
   <!-- Уникальность -->
   <section class=" bg-showcase-1 padding">
