--- a/index.html
+++ b/index.html
@@ -128,27 +128,74 @@
 
 
   <!-- Кому полезен -->
-  <section class=" bg-light padding">
+  <section class=" bg-light padding features-icons text-center">
     <div class="container">
       <div class="text-center ">
         <h1 class="display-4">Кому полезен тренинг?</h1><br />
       </div>
-      <div>
-        <ul>
+
+
+
+
+      <div class="row">
+        <div class="col-lg-3">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-2">
+            <div class="features-icons-icon d-flex">
+              <i class="fas fa-user-tie m-auto" style="color: purple"></i>
+            </div>
+            <!-- <h3>Бизнес</h3> -->
+            <p class="lead mb-0">руководителям, бизнесменам</p>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-2">
+            <div class="features-icons-icon d-flex">
+              <i class="fas fa-chalkboard-teacher m-auto text-warning"></i>
+            </div>
+            <!-- <h3>Психология!</h3> -->
+            <p class="lead mb-0">психологам, тренерам, учителей</p>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-2">
+            <div class="features-icons-icon d-flex">
+              <i class="fas fa-user-graduate m-auto text-danger"></i>
+            </div>
+            <!-- <h3>Учеба</h3> -->
+            <p class="lead mb-0">студентам, школьникам, аспирантам</p>
+          </div>
+        </div>
+        <div class="col-lg-3">
+          <div class="features-icons-item mx-auto mb-0 mb-lg-2">
+            <div class="features-icons-icon d-flex">
+              <i class="fas fa-book-reader m-auto text-success"></i>
+            </div>
+            <!-- <h3>Саморазвитие</h3> -->
+            <p class="lead mb-0">людям, занимающимся саморазвитием</p>
+          </div>
+        </div>
+      </div>
+
+
+
+
+      <div align="left">
+        <!-- <ul>
           <li><span>руководителям, бизнесменам</span></li>
           <li><span>психологам, тренерам, учителей</span></li>
           <li><span>студентам, школьникам, аспирантам</span></li>
           <li><span>людям, занимающимся саморазвитием</span></li>
-        </ul>
-        <p>Вам к нам если…</p>
+        </ul> -->
+        <br/>
+        <p  class="h4"">Вам к нам если…</p>
         <ul>
           <li>читаете уже везде, на кухне, в душе, в ванной, в самолёте … и все равно не успеваете следить за всеми
             трендами </li>
           <li>хочется выглядеть приличным человеком, обсуждать последние книжные новинки и поддержать беседу, но
-            принципиально не читаете (отбили желание с детства в школе) мы вернём вам счастливое чтение и детство J</li>
+            принципиально не читаете (отбили желание с детства в школе) мы вернём вам счастливое чтение и детство :)</li>
           <li>вы студент (все вокруг гуляют ночами, а вы не успеваете к сессии и сидите ночами за книгами) Верните в
             своё расписание заслуженное время для личной жизни</li>
-          <li>хотите открыть для себя новую 4Dреальность. Дёшево и полезно для здоровья J Кинотеатр у вас в голове по
+          <li>хотите открыть для себя новую 4Dреальность. Дёшево и полезно для здоровья :) Кинотеатр у вас в голове по
             цене бумажной книги</li>
           <li>закрыв книгу вы понимаете, что пока читали всё время думали о своём и ничего не запомнили. Приходится
             постоянно перечитывать?..</li>
