--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
 
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta name="description" content="">
-  <meta name="author" content="">
+  <meta name="description" content="Тренинг быстрое чтение">
+  <meta name="author" content="rownarts.com">
 
-  <title>Landing Page - Start Bootstrap Theme</title>
+  <title>Тренинг — Быстрое чтение</title>
 
   <!-- Bootstrap core CSS -->
   <link href="vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
@@ -309,7 +309,7 @@
 
 
 
-
+ 
 
 
 
@@ -972,7 +972,7 @@
               <a href="#">Privacy Policy</a>
             </li>
           </ul> -->
-          <p class="text-muted small mb-4 mb-lg-0">&copy; sch-em.ru 2018. All Rights Reserved.</p>
+          <p class="text-muted small mb-4 mb-lg-0">&copy; sch-em.ru 2018. All Rights Reserved. Design by <a href="http://rownarts.com">rownarts.com</a></p>
         </div>
         <div class="col-lg-6 h-100 text-center text-lg-right my-auto">
           <ul class="list-inline mb-0">
@@ -1007,6 +1007,8 @@
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
 
+
+  <!-- Yandex.Metrika counter --> <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter51158855 = new Ya.Metrika2({ id:51158855, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://cdn.jsdelivr.net/npm/yandex-metrica-watch/tag.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks2"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/51158855" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
 </body>
 
 </html>
