--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="fas fa-kiss-beam m-auto text-primary"></i>
+              <i class="fas fa-kiss-beam m-auto text-info"></i>
             </div>
             <h3>Удовольствие!</h3>
             <p class="lead mb-0">Получать удовольствие от чтения</p>
@@ -105,7 +105,7 @@
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="fas fa-piggy-bank m-auto text-primary"></i>
+              <i class="fas fa-piggy-bank m-auto text-info"></i>
             </div>
             <h3>Время!</h3>
             <p class="lead mb-0">Экономить время</p>
@@ -114,7 +114,7 @@
         <div class="col-lg-4">
           <div class="features-icons-item mx-auto mb-0 mb-lg-3">
             <div class="features-icons-icon d-flex">
-              <i class="fas fa-brain m-auto text-primary"></i>
+              <i class="fas fa-brain m-auto text-info"></i>
             </div>
             <h3>Понимание!</h3>
             <p class="lead mb-0">Улучшить понимание и запоминание информации</p>
@@ -141,7 +141,7 @@
         <div class="col-lg-3">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-2">
             <div class="features-icons-icon d-flex">
-              <i class="fas fa-user-tie m-auto" style="color: purple"></i>
+              <i class="fas fa-user-tie m-auto text-primary" ></i>
             </div>
             <!-- <h3>Бизнес</h3> -->
             <p class="lead mb-0">руководителям, бизнесменам</p>
@@ -153,7 +153,7 @@
               <i class="fas fa-chalkboard-teacher m-auto text-warning"></i>
             </div>
             <!-- <h3>Психология!</h3> -->
-            <p class="lead mb-0">психологам, тренерам, учителей</p>
+            <p class="lead mb-0">психологам, тренерам, учителям</p>
           </div>
         </div>
         <div class="col-lg-3">
