--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
   </nav> -->
 
   <!-- Masthead -->
-  <header class="masthead text-white text-center">
+  <header id="home" class="masthead text-white text-center">
     <div class="overlay"></div>
     <div class="container">
       <div class="row">
@@ -88,7 +88,7 @@
 
 
   <!-- 5 Зачем ? -->
-  <section class="features-icons bg-showcase-1 text-center">
+  <section id="why" class="features-icons bg-showcase-1 text-center">
     <div class="container">
       <h1 class="display-4">Зачем?</h1>
       <br /><br />
@@ -128,20 +128,20 @@
 
 
   <!-- Кому полезен -->
-  <section class=" bg-light padding features-icons text-center">
+  <section id="whom" class="bg-light padding features-icons text-center">
     <div class="container">
       <div class="text-center ">
         <h1 class="display-4">Кому полезен тренинг?</h1><br />
       </div>
+    </div>
 
 
-
-
+    <div class="container">
       <div class="row">
         <div class="col-lg-3">
           <div class="features-icons-item mx-auto mb-5 mb-lg-0 mb-lg-2">
             <div class="features-icons-icon d-flex">
-              <i class="fas fa-user-tie m-auto text-primary" ></i>
+              <i class="fas fa-user-tie m-auto text-primary"></i>
             </div>
             <!-- <h3>Бизнес</h3> -->
             <p class="lead mb-0">руководителям, бизнесменам</p>
@@ -175,19 +175,14 @@
           </div>
         </div>
       </div>
+    </div>
+    <br />
 
 
 
-
-      <div align="left">
-        <!-- <ul>
-          <li><span>руководителям, бизнесменам</span></li>
-          <li><span>психологам, тренерам, учителей</span></li>
-          <li><span>студентам, школьникам, аспирантам</span></li>
-          <li><span>людям, занимающимся саморазвитием</span></li>
-        </ul> -->
-        <br/>
-        <p  class="h4"">Вам к нам если…</p>
+    <div class="container">
+      <p class="h4">Вам к нам если…</p>
+      <p>
         <ul>
           <li>читаете уже везде, на кухне, в душе, в ванной, в самолёте … и все равно не успеваете следить за всеми
             трендами </li>
@@ -200,127 +195,19 @@
           <li>закрыв книгу вы понимаете, что пока читали всё время думали о своём и ничего не запомнили. Приходится
             постоянно перечитывать?..</li>
         </ul>
-      </div>
+      </p>
+    </div>
   </section>
 
 
 
-
-  <!-- кому полезен acordion -->
-  <!-- <section class=" bg-showcase-1 padding">
-    <div class="container">
-      <div>
-
-
-        <div class="card">
-          <div class="card-header" id="headingOne">
-            <h5 class="mb-0">
-              <button class="btn btn-link" type="button" data-toggle="collapse" data-target="#collapseOne"
-                aria-expanded="true" aria-controls="collapseOne">
-                <h1 class="display-4">Кому полезен тренинг?</h1>
-              </button>
-            </h5>
-          </div>
-
-          <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordionExample">
-            <div class="card-body text-lg-left">
-              <p>Вам к нам, если</p>
-              <ul>
-                <li>читаете уже везде, на кухне, в душе, в ванной, в самолёте
-                  и т.д. и все
-                  равно не успеваете следить за всеми трендами </li>
-                <li>хочется выглядеть приличным человеком, обсуждать последние книжные новинки и поддержать беседу,
-                  но принципиально не читаете (отбили желание с детства в школе) мы вернём вам
-                  счастливое
-                  детство/чтение</li>
-                <li>вы студент (все вокруг гуляют ночами, а вы не успеваете к сессии
-                  и сидите
-                  ночами за книгами) Верните в своё расписание заслуженное время для личной жизни</li>
-                <li>хотите открыть для себя новую 4D-реальность. Дёшево и полезно для здоровья :) Кинотеатр
-                  у вас
-                  в голове по цене бумажной книги</li>
-                <li>закрыв книгу вы понимаете, что пока читали всё время думали о своём и ничего
-                  не запомнили. Приходится постоянно перечитывать?</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-
-        <div class="card">
-          <div class="card-header" id="headingTwo">
-            <h5 class="mb-0">
-              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseTwo"
-                aria-expanded="false" aria-controls="collapseTwo">
-                <h1 class="display-4">Результаты</h1>
-              </button>
-            </h5>
-          </div>
-          <div id="collapseTwo" class="collapse" aria-labelledby="headingTwo" data-parent="#accordionExample">
-            <div class="card-body text-lg-left">
-              <ul>
-                <li>За 2 дня скорость возрастёт в <nobr>2-3</nobr> раза (1500 — 6 000 знаков
-                  в минуту)</li>
-                <li>У вас появится (или усилится) желание читать</li>
-                <li>Перестанете отвлекаться во время чтения</li>
-                <li>Вы сможете лучше понимать текст (на <nobr>80-100%</nobr> при скорочтении, в сравнении
-                  с <nobr>40-60%</nobr>
-                  при обычном чтении)</li>
-                <li>Появится свобода выбора: как читать — старой стратегией медленного чтения или принципиально новой
-                  в зависимости от целей чтения и вида литературы</li>
-                <li>Узнаете и освоите инструменты, с помощью которых сможете ещё увеличить свою скорость
-                  в дальнейшем</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-
-        <div class="card">
-          <div class="card-header" id="headingThree">
-            <h5 class="mb-0">
-              <button class="btn btn-link collapsed" type="button" data-toggle="collapse" data-target="#collapseThree"
-                aria-expanded="false" aria-controls="collapseThree">
-                <h1 class="display-4">Уникальность тренинга</h1>
-              </button>
-            </h5>
-          </div>
-          <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordionExample">
-            <div class="card-body text-lg-left">
-              <ul>
-                <li>Экспресс-метод за 2 дня благодаря инструментам НЛП. Быстрое чтение БЫСТРО!</li>
-                <li>Авторская методика с реальных людей, развивших в себе этот навык</li>
-                <li>Лучшие практики на базе исследовательской мастерской. Многолетний опыт .... и отобраны только
-                  реально
-                  работающие упражнения</li>
-                <li>Сам тренинг максимально кайфовый по настроению и атмосфере, наполнению фото, видео, музыка</li>
-                <li>Работа не только с мозгом, но и с эмоциями и с телом — целостный
-                  процесс</li>
-                <li>Побочные эффекты: развитие памяти и воображения</li>
-                <li>Посттренинговое сопровождение</li>
-              </ul>
-            </div>
-          </div>
-        </div>
-
-
-      </div>
-  </section> -->
-
-
-
- 
-
-
-
   <!-- Уникальность -->
-  <section class=" bg-showcase-1 padding">
+  <section class="padding">
     <div class="container">
       <div class="text-center ">
         <h1 class="display-4">Уникальность тренинга</h1><br />
       </div>
       <div>
-
         <ul>
           <li>Экспресс-метод за 2 дня благодаря инструментам НЛП. Быстрое чтение БЫСТРО!</li>
           <li>Авторская методика с реальных людей, развивших в себе этот навык</li>
@@ -334,7 +221,7 @@
           <li>Посттренинговое сопровождение</li>
         </ul>
       </div>
-
+    </div>
   </section>
 
   <!-- Результаты -->
@@ -1008,7 +895,38 @@
 
 
 
-  <!-- Yandex.Metrika counter --> <script type="text/javascript" > (function (d, w, c) { (w[c] = w[c] || []).push(function() { try { w.yaCounter51158855 = new Ya.Metrika2({ id:51158855, clickmap:true, trackLinks:true, accurateTrackBounce:true, webvisor:true, trackHash:true }); } catch(e) { } }); var n = d.getElementsByTagName("script")[0], s = d.createElement("script"), f = function () { n.parentNode.insertBefore(s, n); }; s.type = "text/javascript"; s.async = true; s.src = "https://cdn.jsdelivr.net/npm/yandex-metrica-watch/tag.js"; if (w.opera == "[object Opera]") { d.addEventListener("DOMContentLoaded", f, false); } else { f(); } })(document, window, "yandex_metrika_callbacks2"); </script> <noscript><div><img src="https://mc.yandex.ru/watch/51158855" style="position:absolute; left:-9999px;" alt="" /></div></noscript> <!-- /Yandex.Metrika counter -->
+  <!-- Yandex.Metrika counter -->
+  <script type="text/javascript">
+    (function (d, w, c) {
+      (w[c] = w[c] || []).push(function () {
+        try {
+          w.yaCounter51158855 = new Ya.Metrika2({
+            id: 51158855,
+            clickmap: true,
+            trackLinks: true,
+            accurateTrackBounce: true,
+            webvisor: true,
+            trackHash: true
+          });
+        } catch (e) {}
+      });
+      var n = d.getElementsByTagName("script")[0],
+        s = d.createElement("script"),
+        f = function () {
+          n.parentNode.insertBefore(s, n);
+        };
+      s.type = "text/javascript";
+      s.async = true;
+      s.src = "https://cdn.jsdelivr.net/npm/yandex-metrica-watch/tag.js";
+      if (w.opera == "[object Opera]") {
+        d.addEventListener("DOMContentLoaded", f, false);
+      } else {
+        f();
+      }
+    })(document, window, "yandex_metrika_callbacks2");
+  </script> <noscript>
+    <div><img src="https://mc.yandex.ru/watch/51158855" style="position:absolute; left:-9999px;" alt="" /></div>
+  </noscript> <!-- /Yandex.Metrika counter -->
 </body>
 
 </html>
